@@ -1,21 +1,15 @@
 package org.asmeta.parser;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.fail;
 
-import java.io.File;
-
-import org.apache.log4j.ConsoleAppender;
-import org.apache.log4j.Level;
 import org.apache.log4j.Logger;
-import org.apache.log4j.Priority;
-import org.apache.log4j.SimpleLayout;
 import org.eclipse.emf.common.util.EList;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 
 import asmeta.AsmCollection;
 import asmeta.structure.Asm;
@@ -24,16 +18,17 @@ import asmeta.terms.basicterms.BooleanTerm;
 import asmeta.terms.basicterms.SetTerm;
 import asmeta.terms.basicterms.Term;
 import asmeta.transitionrules.basictransitionrules.ChooseRule;
+
 /**
  * classe di appoggio per testare singole specifiche
  * 
  * @author garganti
  *
  */
-public class AsmParserTest_OneSpec extends AsmParserTest {
+class AsmParserTest_OneSpec extends AsmParserTest {
 
-	@BeforeClass
-	public static void setUpLogger() {
+	@BeforeAll
+	static void setUpLogger() {
 //		AsmParserTest.setUpLogger();
 //		Logger.getLogger("org.asmeta.parser").setLevel(Level.INFO);
 //		// add appender only if empty
@@ -41,25 +36,23 @@ public class AsmParserTest_OneSpec extends AsmParserTest {
 //			log.addAppender(new ConsoleAppender(new SimpleLayout()));
 	}
 
-	@Test
-	public void testSpec() {
+	@Test void spec() {
 		AsmParserTest.setUpLogger();
 		testOneSpec("examples/simple_example/SwapSort.asm");
 		testOneSpec("examples/models/SwapSortMon.asm");
 	}
 
-	@Test
-	public void testOneSpecBagCT() {
+	@Test void oneSpecBagCT() {
 		String file = "test/parser/bagCT.asm";
 		testOneSpec(file);
 	}
-	@Test
-	public void testDF() {
+
+	@Test void df() {
 		String file = "test/parser/Dragonfly_verification.asm";
 		testOneSpec(file);
 	}
-	@Test
-	public void testChooseNoGuard() {
+
+	@Test void chooseNoGuard() {
 		String file = "test/parser/ChooseNoCond.asm";
 		Asm asm = testOneSpec(file).getMain();
 		ChooseRule cr = (ChooseRule) asm.getMainrule().getRuleBody();
@@ -69,177 +62,150 @@ public class AsmParserTest_OneSpec extends AsmParserTest {
 			fail("");
 		}
 	}
-		
-	
-	@Test
-	public void testOneSpec2() {
+
+
+	@Test void oneSpec2() {
 		String file = "test/simulator/domains/enumDomain.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpecLIFTDC() {
+	@Test void oneSpecLIFTDC() {
 		String file = "examples/models/LIFTDC.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpecFileSystem() {
+	@Test void oneSpecFileSystem() {
 		String file = "examples/agents/FileSystem.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpecsluiceGate_with_agents() {
+	@Test void oneSpecsluiceGateWithAgents() {
 		String file = "examples/sluicegate/sluiceGate_with_agents.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpeconeWayTrafficLight_refined() {
+	@Test void oneSpeconeWayTrafficLightRefined() {
 		String file = "examples/traffic_light/oneWayTrafficLight_refined.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpeconeWayTrafficLight() {
+	@Test void oneSpeconeWayTrafficLight() {
 		String file = "examples/traffic_light/oneWayTrafficLight.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpeconeWayTrafficLight2() {
+	@Test void oneSpeconeWayTrafficLight2() {
 		String file = "examples/traffic_light/oneWayTrafficLight2.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpeconeWayTrafficLight_refined_with_agents() {
+	@Test void oneSpeconeWayTrafficLightRefinedWithAgents() {
 		String file = "examples/traffic_light/oneWayTrafficLight_refined_with_agents.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpeconeWayTrafficLight_refined_with_agents_problem() {
+	@Test void oneSpeconeWayTrafficLightRefinedWithAgentsProblem() {
 		String file = "examples/traffic_light/oneWayTrafficLight_refined_with_agents_problem.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpeconeWayTrafficLight_refined_with_agents_seq() {
+	@Test void oneSpeconeWayTrafficLightRefinedWithAgentsSeq() {
 		String file = "examples/traffic_light/oneWayTrafficLight_refined_with_agents_seq.asm";
 		testOneSpec(file);
 	}
 
 	// ALCUNE DI QUESTI DANNO ANCORA ERRORI
 
-	@Test
-	public void testOneSpecLIFT() {
+	@Test void oneSpecLIFT() {
 		String file = "examples/models/LIFT.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpecFlipFlop() {
+	@Test void oneSpecFlipFlop() {
 		String file = "examples/models/FlipFlop.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpecDom() {
+	@Test void oneSpecDom() {
 		String file = "test/errors/rnp/prod.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpec3() {
+	@Test void oneSpec3() {
 		String file = "test/simulator/rules/FLIP_FLOP_4.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpec4() {
+	@Test void oneSpec4() {
 		String file = "test/simulator/terms/MapTerm.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneNot() {
+	@Test void oneNot() {
 		String file = "test/simulator/RelationalExpr01.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpec6() {
+	@Test void oneSpec6() {
 		String file = "test/simulator/macro/macro07.asm";
 		// the parser must fail
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testOneSpecLibrary() {
+	@Test void oneSpecLibrary() {
 		testOneSpec("examples/library/Library.asm");
 	}
 
-	@Test
-	public void testOneSpec_parBoolean() {
+	@Test void oneSpecParBoolean() {
 		testOneSpec("test/errors/rpns/parBoolean.asm");
 	}
 
-	@Test
-	public void testConcrDomAndStdl() {
+	@Test void concrDomAndStdl() {
 		String file = "test/parser/concrDomAndStdl.asm";
 		testOneSpec(file);
 	}
-	
-	@Test
-	public void testFMSIO3() {
+
+	@Test void fmsio3() {
 		String file = "erinda/FMS_IO_3.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testSwapSortOnSeq() {
+	@Test void swapSortOnSeq() {
 		String file = "examples/simple_example/swapSortOnSeq.asm";
 		testOneSpec(file);
 	}
 
-	@Test
-	public void testNeedhamSchroeder() {
+	@Test void needhamSchroeder() {
 		//testOneSpec("examples/NeedhamSchroeder/oldVersion/NeedhamSchroederWithSpy.asm");
 	}
 
-	@Test
-	public void testNull() {
+	@Test void testNull() {
 		AsmCollection asm = testOneAsmFile("test/parser/null/null.asm");
 		assertFalse(asm.iterator().hasNext());
 	}
-	@Test
-	public void testonlyComments() {
+
+	@Test void testonlyComments() {
 		AsmCollection asm = testOneAsmFile("test/parser/null/comment.asm");
 		assertFalse(asm.iterator().hasNext());
 	}
-	
-	@Test
-	public void testSetTerm() {
+
+	@Test void setTerm() {
 		// {1..1} => shoule be either error or just 1
 		AsmCollection collection = testOneSpec("test/parser/setterm.asm");
 		EList<DomainDefinition> domainDefinition = collection.getMain().getBodySection().getDomainDefinition();
 		assertEquals(1,domainDefinition.size());
-		Term body = domainDefinition.get(0).getBody();
-		assertTrue(body instanceof SetTerm);
+		Term body = domainDefinition.getFirst().getBody();
+		assertInstanceOf(SetTerm.class, body);
 		assertEquals(1,((SetTerm) body).getTerm().size());
 	}
-	
-	@Test
-	public void testOrderSystem() {
+
+	@Test void orderSystem() {
 		AsmCollection asm = testOneSpec("examples/models/ordersystem_april2010.asm");
 		assertNotNull(asm);
 	}
 
 
-	@Test
-	public void testPhilo1() {
+	@Test void philo1() {
 		Logger log = Logger.getLogger("org.asmeta.parser");
 		//log.setLevel(Level.ALL);
 		String file = "examples/philosophers/philosophers1.asm";
